--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -49,6 +49,8 @@
             <i class="fa fa-shopping-cart ml-1"></i>
           </button>
 
+          <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+
 
           <!--<form class="d-flex justify-content-left">-->
             <!--&lt;!&ndash; Default input &ndash;&gt;-->
