--- a/src/app/components/home-product/home-product.component.html
+++ b/src/app/components/home-product/home-product.component.html
@@ -5,7 +5,7 @@
 
 <!--Main layout-->
 <main>
-  <div class="container">
+  <div class="container animated fadeIn">
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
