--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,118 @@
-<p>
-  profile works!
-</p>
+<div class="container">
+  <div class="row">
+
+    <div class="col"> </div>
+    <div class="col-10">
+
+
+
+      <div class="card">
+        <div class="text-center">
+          <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg"
+               class="img-fluid rounded-circle hoverable z-depth-1" alt="Responsive image"
+               style="width: 30%">
+        </div>
+
+        <div class="card-body">
+          <!--<div class="row">-->
+
+            <!--<div class="container">-->
+              <!--<div class="row">-->
+                <!--&lt;!&ndash; Default input &ndash;&gt;-->
+                <!--<label for="exampleForm1">Nombre</label>-->
+                <!--<input type="text" id="exampleForm1" class="form-control">-->
+                <!--&lt;!&ndash; Default input &ndash;&gt;-->
+                <!--<label for="exampleForm2">Correo</label>-->
+                <!--<input type="text" id="exampleForm2" class="form-control">-->
+              <!--</div>-->
+            <!--</div>-->
+
+          <!--</div>-->
+
+
+          <form>
+            <p class="h4 text-center py-4">My Profile</p>
+
+            <!-- Material input text -->
+            <div class="md-form">
+              <i class="fa fa-user prefix grey-text"></i>
+              <input type="text" id="materialFormCardNameEx" class="form-control">
+              <label for="materialFormCardNameEx" class="font-weight-light">First Name</label>
+            </div>
+
+            <!-- Material input email -->
+            <div class="md-form">
+              <i class="fa fa-envelope prefix grey-text"></i>
+              <input type="email" id="materialFormCardEmailEx" class="form-control">
+              <label for="materialFormCardEmailEx" class="font-weight-light">Email</label>
+            </div>
+
+            <!--&lt;!&ndash; Material input email &ndash;&gt;-->
+            <!--<div class="md-form">-->
+            <!--<i class="fa fa-exclamation-triangle prefix grey-text"></i>-->
+            <!--<input type="email" id="materialFormCardConfirmEx" class="form-control">-->
+            <!--<label for="materialFormCardConfirmEx" class="font-weight-light">Confirm your email</label>-->
+            <!--</div>-->
+
+            <!-- Material input password -->
+            <div class="md-form">
+              <i class="fa fa-lock prefix grey-text"></i>
+              <input type="text" id="materialFormCardPasswordEx" class="form-control">
+              <label for="materialFormCardPasswordEx" class="font-weight-light">Country</label>
+            </div>
+
+            <!-- Material input password -->
+            <div class="md-form">
+              <i class="fa fa-lock prefix grey-text"></i>
+              <input type="text" id="materialFormCardPasswordEx2" class="form-control">
+              <label for="materialFormCardPasswordEx2" class="font-weight-light">City</label>
+            </div>
+
+          </form>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
+
+
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="col"></div>-->
+    <!--<div class="col-11">-->
+
+      <!--&lt;!&ndash; Card Wider &ndash;&gt;-->
+      <!--<div class="card card-cascade wider">-->
+
+        <!--&lt;!&ndash; Card image &ndash;&gt;-->
+        <!--<div class="view overlay">-->
+          <!--<img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/photo6.jpg" alt="Card image cap">-->
+          <!--<a href="#!">-->
+            <!--<div class="mask rgba-white-slight"></div>-->
+          <!--</a>-->
+        <!--</div>-->
+
+        <!--&lt;!&ndash; Card content &ndash;&gt;-->
+        <!--<div class="card-body text-center">-->
+
+          <!--&lt;!&ndash; Title &ndash;&gt;-->
+          <!--<h4 class="card-title"><strong>Alison Belmont</strong></h4>-->
+          <!--&lt;!&ndash; Subtitle &ndash;&gt;-->
+          <!--<h5 class="blue-text pb-2"><strong>Graffiti Artist</strong></h5>-->
+          <!--&lt;!&ndash; Text &ndash;&gt;-->
+          <!--<p class="card-text">Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem aperiam. </p>-->
+
+        <!--</div>-->
+
+      <!--</div>-->
+      <!--&lt;!&ndash; Card Wider &ndash;&gt;-->
+
+
+
+    <!--</div>-->
+    <!--<div class="col"></div>-->
+  <!--</div>-->
+<!--</div>-->
