--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -1,8 +1,8 @@
 
-<div class="container">
+<div class="container animated fadeIn">
   <div class="row">
     <div class="col"></div>
-    <div class="col">
+    <div class="col-9" style="padding-top:9px">
 
 
       <!-- Card -->
@@ -19,28 +19,35 @@
             <div class="md-form">
               <i class="fa fa-user prefix grey-text"></i>
               <input type="text" id="materialFormCardNameEx" class="form-control">
-              <label for="materialFormCardNameEx" class="font-weight-light">Your name</label>
+              <label for="materialFormCardNameEx" class="font-weight-light">First Name</label>
             </div>
 
             <!-- Material input email -->
             <div class="md-form">
               <i class="fa fa-envelope prefix grey-text"></i>
               <input type="email" id="materialFormCardEmailEx" class="form-control">
-              <label for="materialFormCardEmailEx" class="font-weight-light">Your email</label>
+              <label for="materialFormCardEmailEx" class="font-weight-light">Email</label>
             </div>
 
-            <!-- Material input email -->
-            <div class="md-form">
-              <i class="fa fa-exclamation-triangle prefix grey-text"></i>
-              <input type="email" id="materialFormCardConfirmEx" class="form-control">
-              <label for="materialFormCardConfirmEx" class="font-weight-light">Confirm your email</label>
-            </div>
+            <!--&lt;!&ndash; Material input email &ndash;&gt;-->
+            <!--<div class="md-form">-->
+              <!--<i class="fa fa-exclamation-triangle prefix grey-text"></i>-->
+              <!--<input type="email" id="materialFormCardConfirmEx" class="form-control">-->
+              <!--<label for="materialFormCardConfirmEx" class="font-weight-light">Confirm your email</label>-->
+            <!--</div>-->
 
             <!-- Material input password -->
             <div class="md-form">
               <i class="fa fa-lock prefix grey-text"></i>
               <input type="password" id="materialFormCardPasswordEx" class="form-control">
-              <label for="materialFormCardPasswordEx" class="font-weight-light">Your password</label>
+              <label for="materialFormCardPasswordEx" class="font-weight-light">Password</label>
+            </div>
+
+            <!-- Material input password -->
+            <div class="md-form">
+              <i class="fa fa-lock prefix grey-text"></i>
+              <input type="password" id="materialFormCardPasswordEx2" class="form-control">
+              <label for="materialFormCardPasswordEx" class="font-weight-light">Confirm Password</label>
             </div>
 
             <div class="text-center py-4 mt-3">
