--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
       <ul class="navbar-nav nav-flex-icons">
         <li class="nav-item">
           <a class="nav-link waves-effect" [routerLink]="['/cart']">
-            <span class="badge red z-depth-1 mr-1"> 1 </span>
+            <span class="badge red z-depth-1 mr-1" *ngIf="_carritoService.items.length > 0"> {{_carritoService.items.length}} </span>
             <i class="fa fa-shopping-cart"></i>
             <span class="clearfix d-none d-sm-inline-block"> Cart </span>
           </a>
