--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -22,9 +22,9 @@
 
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
-            <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
-            </h1>
+            <!--<h1 class="mb-4">-->
+              <!--<strong>Learn Bootstrap 4 with MDB</strong>-->
+            <!--</h1>-->
 
             <p>
               <strong>Best & free guide of responsive web design</strong>
@@ -35,9 +35,9 @@
                 available. Create your own, stunning website.</strong>
             </p>
 
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial
-              <i class="fa fa-graduation-cap ml-2"></i>
-            </a>
+            <!--<a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial-->
+              <!--<i class="fa fa-graduation-cap ml-2"></i>-->
+            <!--</a>-->
           </div>
           <!-- Content -->
 
@@ -57,9 +57,9 @@
 
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
-            <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
-            </h1>
+            <!--<h1 class="mb-4">-->
+              <!--<strong>Learn Bootstrap 4 with MDB</strong>-->
+            <!--</h1>-->
 
             <p>
               <strong>Best & free guide of responsive web design</strong>
@@ -70,9 +70,9 @@
                 available. Create your own, stunning website.</strong>
             </p>
 
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial
-              <i class="fa fa-graduation-cap ml-2"></i>
-            </a>
+            <!--<a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial-->
+              <!--<i class="fa fa-graduation-cap ml-2"></i>-->
+            <!--</a>-->
           </div>
           <!-- Content -->
 
@@ -92,9 +92,9 @@
 
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
-            <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
-            </h1>
+            <!--<h1 class="mb-4">-->
+              <!--<strong>Learn Bootstrap 4 with MDB</strong>-->
+            <!--</h1>-->
 
             <p>
               <strong>Best & free guide of responsive web design</strong>
@@ -105,9 +105,9 @@
                 available. Create your own, stunning website.</strong>
             </p>
 
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial
-              <i class="fa fa-graduation-cap ml-2"></i>
-            </a>
+            <!--<a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg">Start free tutorial-->
+              <!--<i class="fa fa-graduation-cap ml-2"></i>-->
+            <!--</a>-->
           </div>
           <!-- Content -->
 
