--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -13,7 +13,7 @@
 
           <!-- Material form register -->
           <form>
-            <p class="h4 text-center py-4">Sign up</p>
+            <p class="h4 text-center py-4">Registro</p>
 
             <!-- Material input text -->
             <div class="md-form">
