--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.ImageCartShopping{
+  width: 90px;
+  height: 70px;
+}
+
+.badge{
+  cursor: pointer;
+}
