--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link waves-effect" [routerLink]="['/home']">Home
+          <a class="nav-link waves-effect" [routerLink]="['/']">Home
             <!-- <span class="sr-only">(current)</span> -->
           </a>
         </li>
