arreglado el router

--- a/src/app/components/home-product/home-product.component.html
+++ b/src/app/components/home-product/home-product.component.html
@@ -8,10 +8,10 @@
   <div class="container animated fadeIn">
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+    <nav class="navbar navbar-expand-lg navbar-dark mdb-color elegant-color mt-3 mb-5">
 
       <!-- Navbar brand -->
-      <span class="navbar-brand">Categories:</span>
+      <span class="navbar-brand">Categorias:</span>
 
       <!-- Collapse button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -26,18 +26,18 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">All
-              <span class="sr-only">(current)</span>
+            <a class="nav-link" href="#">Todas
+              <!--<span class="sr-only">(current)</span>-->
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Shirts</a>
+            <a class="nav-link" href="#">Casual</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sport wears</a>
+            <a class="nav-link" href="#">Deportiva</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Outwears</a>
+            <a class="nav-link" href="#">Vestir</a>
           </li>
 
         </ul>
@@ -45,7 +45,7 @@
 
         <form class="form-inline">
           <div class="md-form mt-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
           </div>
         </form>
       </div>
