--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,18 +20,21 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link waves-effect" [routerLink]="['/']">Home
+          <a class="nav-link waves-effect" [routerLink]="['/home']">Home
              <!--<span class="sr-only">(current)</span>-->
           </a>
         </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link waves-effect" href="#">About</a>
         </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link waves-effect" [routerLink]="['/register']">Register</a>
         </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link waves-effect" [routerLink]="['/profile']">Profile</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link waves-effect" [routerLink]="['/login']">Login</a>
         </li>
       </ul>
 
