--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -2,7 +2,7 @@
 <div class="container animated fadeIn">
   <div class="row">
     <div class="col"></div>
-    <div class="col-9" style="padding-top:9px">
+    <div class="col-9 col-sm-12" style="padding-top:9px">
 
 
       <!-- Card -->
@@ -12,46 +12,56 @@
         <div class="card-body">
 
           <!-- Material form register -->
-          <form>
+          <form [formGroup]="forma" (ngSubmit)="guardarCambiosFormulario()" novalidate="novalidate" autocomplete="off">
             <p class="h4 text-center py-4">Registro</p>
 
-            <!-- Material input text -->
+            <!-- Username -->
             <div class="md-form">
               <i class="fa fa-user prefix grey-text"></i>
-              <input type="text" id="materialFormCardNameEx" class="form-control">
-              <label for="materialFormCardNameEx" class="font-weight-light">First Name</label>
+              <input type="text" id="username" class="form-control" formControlName="user">
+              <label for="username" class="font-weight-light">User</label>
+              <!--<span *ngIf="!forma.controls['user'].valid" class="badge badge-danger"><i class="fa fa-info" aria-hidden="true"></i></span>-->
             </div>
 
-            <!-- Material input email -->
+            <!-- First Name -->
+            <div class="md-form">
+              <i class="fa fa-user prefix grey-text"></i>
+              <input type="text" id="first_name" class="form-control" formControlName="first_name">
+              <label for="first_name" class="font-weight-light">First Name</label>
+            </div>
+
+            <!-- Last Name -->
+            <div class="md-form">
+              <i class="fa fa-user prefix grey-text"></i>
+              <input type="text" id="last_name" class="form-control" formControlName="last_name">
+              <label for="last_name" class="font-weight-light">Last Name</label>
+            </div>
+
+            <!-- Email -->
             <div class="md-form">
               <i class="fa fa-envelope prefix grey-text"></i>
-              <input type="email" id="materialFormCardEmailEx" class="form-control">
-              <label for="materialFormCardEmailEx" class="font-weight-light">Email</label>
+              <input type="email" id="email" class="form-control" formControlName="email">
+              <label for="email" class="font-weight-light">Email</label>
             </div>
 
-            <!--&lt;!&ndash; Material input email &ndash;&gt;-->
-            <!--<div class="md-form">-->
-              <!--<i class="fa fa-exclamation-triangle prefix grey-text"></i>-->
-              <!--<input type="email" id="materialFormCardConfirmEx" class="form-control">-->
-              <!--<label for="materialFormCardConfirmEx" class="font-weight-light">Confirm your email</label>-->
-            <!--</div>-->
-
-            <!-- Material input password -->
+            <!-- Password -->
             <div class="md-form">
               <i class="fa fa-lock prefix grey-text"></i>
-              <input type="password" id="materialFormCardPasswordEx" class="form-control">
-              <label for="materialFormCardPasswordEx" class="font-weight-light">Password</label>
+              <input type="password" id="password" class="form-control" formControlName="password">
+              <label for="password" class="font-weight-light">Password</label>
             </div>
 
-            <!-- Material input password -->
+            <!-- Repeat Password -->
             <div class="md-form">
               <i class="fa fa-lock prefix grey-text"></i>
-              <input type="password" id="materialFormCardPasswordEx2" class="form-control">
-              <label for="materialFormCardPasswordEx2" class="font-weight-light">Confirm Password</label>
+              <input type="password" id="repeat_password" class="form-control" formControlName="repeat_password">
+              <label for="repeat_password" class="font-weight-light">Repeat Password</label>
             </div>
 
             <div class="text-center py-4 mt-3">
-              <button class="btn btn-cyan" type="submit">Register</button>
+              <button class="btn"
+                      [ngClass]="{ 'btn-danger':forma.invalid, 'disabled': forma.invalid, 'btn-success':forma.valid }"
+                      type="submit">Register</button>
             </div>
           </form>
           <!-- Material form register -->
